external/qt-everywhere-opensource-src-5.9.1/qtscxml/tests/auto/parser/data/syntaxErrors5.scxml.errors
:/tst_parser/data/syntaxErrors5.scxml:8:20: error: Unexpected element state
:/tst_parser/data/syntaxErrors5.scxml:10:17: error: Error parsing SCXML file: Opening and ending tag mismatch.
