external/qt-everywhere-opensource-src-5.9.1/qtscxml/tests/auto/parser/data/syntaxErrors5.scxml
<?xml version="1.0" ?>
<scxml xmlns="http://www.w3.org/2005/07/scxml" version="1.0">
    <state id="wrapper">
        <transition event="OP.INSERT">
            <if cond="_event.data.operator == 'OPER.PLUS'">
                <assign location="long_expr" expr="long_expr+'+'" />
            <elseif cond="_event.data.operator=='OPER.MINUS'" />
  <state id="zero1">
       tion="long_expr" expr="long_expr+'-'" />
            </if>
        </transition>
    </state>
</scxml>
